# go-backend/docs/swagger.yaml
@@ -158,6 +158,13 @@ definitions:
     - name
     - password
     type: object
+  model.UserDetails:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+    type: object
   model.UserInvitationsResponse:
     properties:
       invitations:
@@ -438,6 +445,36 @@ paths:
       summary: Обновить задачу
       tags:
       - Tasks
+  /v1/projects/{project_id}/users:
+    get:
+      description: Возвращает список всех пользователей, работающих над проектом,
+        включая владельца
+      parameters:
+      - description: ID проекта
+        in: path
+        name: project_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Список участников проекта
+          schema:
+            items:
+              $ref: '#/definitions/model.UserDetails'
+            type: array
+        "400":
+          description: Неверный запрос
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Ошибка сервера
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      summary: Получить список участников проекта
+      tags:
+      - Project
   /v1/projects/{project_id}/view:
     put:
       consumes:
