# go-backend/internal/api/router/ProjectRouters.go
@@ -11,4 +11,5 @@ func (router *Router) ProjectRoutes(group *gin.RouterGroup) {
 	group.PUT("/projects/:project_id/view", controller.ChangeProjectView)
 	group.GET("/projects/:project_id", controller.GetProjectDetails)
 	group.GET("/user/projects", middleware.CookieMiddleware(), controller.GetProjects)
+	group.GET("/projects/:project_id/users", middleware.CookieMiddleware(), controller.GetProjectUsers)
 }
